--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -32,9 +32,23 @@ body {
 .messageBox {
   width: 500px;
   height: 300px;
-  overflow: scroll;
+  overflow-y: scroll;
   background-color: #3d4351;
   margin: 10px;
+  border-radius: 5px;
+}
+
+.messageBox::-webkit-scrollbar {
+  width: 7px;
+}
+
+.messageBox::-webkit-scrollbar-track {
+  background: #1f232c;
+  border-radius: 5px;
+}
+
+.messageBox::-webkit-scrollbar-thumb {
+  background: #acacac;
   border-radius: 5px;
 }
 
@@ -48,10 +62,12 @@ body {
   background-color: #3d4351;
   border: none;
   border-radius: 5px;
-  height: 20px;
+  height: 30px;
+  font-size: 1.1em;
   color: white;
   margin-right: 5px;
-  width: 443px;
+  width: 430px;
+  padding-left: 5px;
 }
 
 .messageInput:focus {
@@ -62,24 +78,26 @@ body {
   background-color: #3d4351;
   border: none;
   border-radius: 5px;
-  height: 20px;
+  height: 30px;
   color: white;
   margin-left: 5px;
+  font-size: 1.1em;
+  cursor: pointer;
 }
 
 .message {
   background-color: #505766;
   border-radius: 5px;
-  margin: 5px;
+  padding: 8px;
+  margin: 7px;
 }
 
 .messageAuthor {
   color: #d2d2d2;
-  margin: 10px;
   font-size: 0.8em;
+  margin: 0;
 }
 
 .messageContent {
-  margin: 10px;
-  margin-top: -3px;
+  margin: 0;
 }
