--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,7 @@
-body {
+html, body, input, button {
   color: white;
   font-family: 'Open Sans', sans-serif;
-  height: 100vh;
+  height: 100%;
   margin: 0;
 }
 
@@ -31,10 +31,11 @@ body {
 
 .messageBox {
   width: 500px;
+  max-width: 87vw;
   height: 300px;
   overflow-y: scroll;
   background-color: #3d4351;
-  margin: 10px;
+  margin: 10px 0;
   border-radius: 5px;
 }
 
@@ -56,6 +57,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 10px;
 }
 
 .messageInput {
@@ -65,9 +67,7 @@ body {
   height: 30px;
   font-size: 1.1em;
   color: white;
-  margin-right: 5px;
-  width: 430px;
-  padding-left: 5px;
+  flex-grow: 1;
 }
 
 .messageInput:focus {
@@ -80,7 +80,6 @@ body {
   border-radius: 5px;
   height: 30px;
   color: white;
-  margin-left: 5px;
   font-size: 1.1em;
   cursor: pointer;
 }
